--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
   .one{
-  min-height: 400px;
   background: url('../ip2/assets/backgrounds/landing.jpg') no-repeat;
   color:  #ffffff;
   text-align: center;
+  font-family: 'Pacifico', cursive;
 }
   .Breakfast{
   height:210px;
@@ -12,6 +12,7 @@
   display: flex;
   color: #ffffff;
   align-items: center;
+  font-family: 'Pacifico', cursive;
   }
   .Lunch{
   height:210px;
@@ -21,15 +22,16 @@
   display: flex;
   color:  #ffffff;
   align-items: center;
+  font-family: 'Pacifico', cursive;
   }
   .Dinner{
   height:210px;
-  width: 350px;
   background: url('../ip2/assets/foodtop/dinner.jpg') no-repeat;
   color:  #ffffff;
   justify-content: center;
   display: flex;
   align-items: center;
+  font-family: 'Pacifico', cursive;
   }
  .happyhour{
    height: 105px;
@@ -38,6 +40,7 @@
    justify-content: center;
    display: flex;
    align-items: center;
+   font-family: 'Pacifico', cursive;
  }
  .partytime{
    height: 105px;
@@ -46,61 +49,74 @@
    justify-content: center;
    display: flex;
    align-items: center;
+   font-family: 'Pacifico', cursive;
  }
- .button{
-   font-style:normal;
-   color: #ff3300;
-   font-style: oblique;
-
- }
+.button{
+  border-color: #F15A29;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 18px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 5px;
+}
  .row4{
 background: url('../ip2/assets/backgrounds/foodsBg.jpg') no-repeat;
 border: 2px;
 padding: 50px;
 margin: 10px;
+ font-family: 'Pacifico', cursive;
  }
 
 .row2{
   border: 2px;
  padding: 6px;
  margin: 20px;
+ font-family: 'Pacifico', cursive;
 }
 
 .row3{
   border: 2px;
  padding: 6px;
  margin: 20px;
+  font-family: 'Pacifico', cursive;
 }
 
 .chakula{
   color:#ff3300;
   font-family:Times;
   font-size: 50%;
+   font-family: 'Pacifico', cursive;
 }
 .heading{
   color:#ff3300;
   font-style:normal;
-  font-family: Times;
+ font-family: 'Pacifico', cursive;
 
 }
 .Eagle{
    border: 2px;
    padding: 20px;
    margin: 60px;
-
-  border-right: 4px solid grey;
+ font-family: 'Pacifico', cursive;
+   border-right: 4px solid grey;
 
 
 }
 .heading2{
   color:#ff3300;
   font-style:normal;
-  font-family: Times;
+  font-family: 'Pacifico', cursive;
+
 }
 .Eagle2{
   border: 2px;
   padding: 20px;
   margin: 60px;
+ font-family: 'Pacifico', cursive;
+
 }
 .Email{
   text-align: center;
@@ -126,26 +142,57 @@ margin: 10px;
   width:1500px;
   height:500px;
 }
-.img{
-  border: 2px solid grey;
-  border-width:thick;
-  border-radius: 10px;
+
+.imgfood {
+  border: 10px solid grey;
+    text-align: center;
+    margin-left: 85px;
+    margin-right: 10px;
+    border-radius: 10px;
+    
+        
+    }
+.imgdrink{
+    border-right: 10px solid grey;
+    border-left: 10px solid grey;
+    border-top: 10px solid grey;
+    border-bottom: 10px solid grey;
+    margin-right: 26px;
+    border-radius: 10px;
+    text-align: center;
+    
+}
+    
+    
+    
+
 }
 
 
- .gold{
+.gold{
    background: url('../ip2/assets/backgrounds/subscribe.jpg') no-repeat;
    text-align: center;
-   color:orangered;
+   color:#F15A29;
    font-size:250%;
-   font-family:times;
+    font-family: 'Pacifico', cursive;
    margin:0px;
 
 }
 .general{
-    background-color:orangered;
+    background-color:#F15A29;
     text-align: center;
-    font-family:times;
-    color: aliceblue
+     font-family: 'Pacifico', cursive;
+    color: aliceblue;
     
+}
+.fa{
+    color:whitesmoke;
+    text-align:horizontal;
+     font-family: 'Pacifico', cursive;
+}
+
+.copyright{
+ color:#ffffff ;
+ font-size: 15px;
+  font-family: 'Pacifico', cursive;
 }
